[package]
name = "langite"
version = "0.1.0"
edition = "2024"

[dependencies]
derive_more = { version = "2.0.1", features = ["full"] }
lasso = { version = "0.7.3", features = ["multi-threaded"] }
rustc-hash = "2.1.1"
slotmap = "1.0.7"
thiserror = "2.0.15"

[lints.rust]
elided_lifetimes_in_paths = "deny"
